[BACKEND] Added GET All Clinics Endpoint
