# app/controllers/clinics.server.controller.js
@@ -3,6 +3,18 @@ const Address = require('mongoose').model('Address');
 const Clinic = require('mongoose').model('Clinic');
 
 
+exports.getAllClinics = function (req, res, next) {
+        Clinic.find({}, function (err,clinics) {
+            if(err){
+                console.log("error", err);
+                return res.status(500).send(err).end();
+            }else{
+                return res.status(200).send(clinics);
+            }
+        });
+};
+
+
 // get clinic by Id to get a clinic provided by the given id
 exports.getClinicById = (req, res, next , id) => {
     console.log(id);
