# app/routes/clinics.server.routes.js
@@ -3,5 +3,6 @@ const clinics = require("../controllers/clinics.server.controller");
 
 // Define the routes module' method
 module.exports = function (app) {
+    app.get("/api/clinics", clinics.getAllClinics);
     app.param('clinicId', clinics.getClinicById);
 };
